# bosch-ai-framework

./: .gitignore  CLAUDE.md  LICENSE  README.md  plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analytics/: auth.py  gunicorn_config.py  llm.py  main.py  manifest.yml  pyproject.toml  requirements.txt  settings.py  settings.yaml
analytics/api/: chat.py  health.py
analytics/core/: agent.py  bff_client.py  chart.py  mock_bff.py  session.py  tools.py
analytics/models/: request.py  response.py
bosch_ai_framework/: __init__.py
bosch_ai_framework/agent/: __init__.py  loop.py  registry.py
bosch_ai_framework/auth/: __init__.py
bosch_ai_framework/chat/: __init__.py  handler.py  registry.py  state.py
bosch_ai_framework/config/: __init__.py  settings.py
bosch_ai_framework/document/: __init__.py
bosch_ai_framework/document/excel/: __init__.py  date_normalize.py
bosch_ai_framework/document/pdf/: __init__.py  vlm.py
bosch_ai_framework/dsl/: __init__.py  parser.py
bosch_ai_framework/llm/: __init__.py  instructor.py  router.py
bosch_ai_framework/rag/: __init__.py  corpus.py  lookup.py  retriever.py
bosch_ai_framework/sandbox/: __init__.py  executor.py
bosch_ai_framework/server/: __init__.py  app.py  logging.py  middleware.py
bosch_ai_framework/tasks/: __init__.py  manager.py
bosch_ai_framework/utils/: __init__.py  errors.py
deployment/cf/: deploy.sh
document/: auth.py  gunicorn_conf.py  llm.py  main.py  manifest.yml  pyproject.toml  requirements.txt  run.py  settings.py  settings.yaml  tasks.py  utils.py
document/chat/: __init__.py  diagnose.py  handler.py  ops.py  registry.py  sessions.py  state.py
document/excel/: __init__.py  _common.py  complex.py  core.py  date_normalize.py  routes.py  simple.py  wide.py
document/excel/clients/: __init__.py
document/excel/clients/chery/: __init__.py
document/excel/clients/geely_cd/: __init__.py  schemas.py
document/excel/clients/geely_hzw3/: __init__.py  schemas.py
document/excel/clients/geely_ms/: __init__.py  schemas.py
document/excel/clients/geely_yy/: __init__.py  schemas.py
document/excel/clients/xpeng_zq/: __init__.py  executor.py  prompts.py  schemas.py
document/pdf/: __init__.py  _common.py  routes.py
document/pdf/clients/: __init__.py
document/pdf/clients/retro/: __init__.py  schemas.py
document/pdf/pipeline/: ocr.py  runner.py  text.py  vlm.py
forecast/: alembic.ini  auth.py  database.py  db_models.py  gunicorn_config.py  llm.py  main.py  manifest.yml  pyproject.toml  requirements.txt  settings.py  settings.yaml  task.py  utils.py
forecast/alembic/: env.py
forecast/alembic/versions/: 263fa0ac03ac_initial.py
forecast/core/: accuracy.py  agent.py  executor.py  heavy_skill.py  memory.py  orchestrator.py  rate_limit.py  skill_manager.py  tools.py
forecast/docs/: forecast.json
forecast/docs/presets/: README.md  arima.md  crd_product_topdown.md  crd_vehicle_topdown.md  fawvw_long_cycle.md  fwdy_jitcall_priority.md  gac_ne_monthly_split.md  geely_monthly_daily_blend.md  holt_winters.md  ming_daily_order_blend.md  saic_daily_to_monthly_split.md  toyota_row_merge_freeze.md
forecast/models/: __init__.py  assistant.py  chat.py  forecast.py  skill.py
forecast/routes/: assistant.py  chat.py  forecast.py  skill.py
forecast/skills/: dsl.py
forecast/skills/presets/: __init__.py  _base_models.py  _business.py  _helpers.py  _statistical.py  _statsmodels.py
forecast/tests/: test_accuracy.py  test_business_presets.py  test_dsl.py  test_executor_integration.py  test_memory_summary.py  test_new_helpers.py  test_orchestrator_repair.py  test_phase2_presets.py  test_presets.py  test_python_sandbox.py  test_routes.py  test_skill_tags.py  test_skill_versions.py
infra/: __init__.py  auth.py  btp.py  http_client.py  llm.py  logs.py  observability.py  pyproject.toml  settings.py  tasks.py  tools.py  utils.py
infra/agent/: __init__.py  base.py  executor.py  loop.py  memory.py  planner.py  sandbox.py  tool.py
infra/config/: __init__.py  auth.py  settings.py
infra/llm/: __init__.py  client.py  router.py
infra/logging/: __init__.py
infra/skill/: __init__.py
infra/task/: __init__.py  backend.py  types.py
rag/: __init__.py  gunicorn_conf.py  main.py  manifest.yml  pyproject.toml  requirements.txt  run.py  settings.py  settings.yaml  xs-security.json
rag/chatbot/: bpae_pipeline.py  routes.py  schemas.py
rag/core/: __init__.py  auth.py  llm.py  observability.py  ratelimit.py  utils.py
rag/rag/: __init__.py  corpus.py  filter.py  markdown_kb.py  organize.py  pipeline.py  retrieve_hybrid.py  retrieve_lookup.py
rag/rag/tools/: __init__.py  build_kb_ast.py
