[project]
name = "bosch-ai-platform"
version = "0.1.0"
description = "Bosch AI Platform Monorepo"
requires-python = ">=3.11,<3.13"

[tool.uv.workspace]
members = [
    "infra",
    "document",
    "rag",
    "forecast",
    "analytics",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
