[project]
name = "bosch-ai-platform"
version = "0.1.0"
description = "Bosch AI Platform Monorepo"
requires-python = ">=3.11,<3.13"

[tool.uv.workspace]
members = [
    "infra",
    "document",
    "rag",
    "forecast",
    "analytics",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
