[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics"
version = "0.1.0"
description = "AI BI / NL2SQL 分析网关"
requires-python = ">=3.11,<3.13"
dependencies = [
    "infra",
    "fastapi>=0.104.0",
    "pydantic>=2.0",
    "gunicorn>=22",
    "uvicorn[standard]>=0.30",
]

[tool.uv.sources]
infra = { workspace = true }

[tool.setuptools.packages.find]
where = [".."]
include = ["analytics*"]
