[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast"
version = "0.1.0"
description = "预测 AI Agent — Function Generator"
requires-python = ">=3.11,<3.13"
dependencies = [
    "infra",
    "fastapi>=0.104.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "scipy>=1.10",
    "sse-starlette>=2.0",
    "gunicorn>=22",
    "uvicorn[standard]>=0.30",
]

[tool.uv.sources]
infra = { workspace = true }

[tool.setuptools.packages.find]
where = [".."]
include = ["forecast*"]
