[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag"
version = "0.1.0"
description = "RAG 知识库分析 — 检索增强生成 + BPAE 管道"
requires-python = ">=3.11,<3.13"
dependencies = [
    "infra",
    "fastapi>=0.104.0",
    "pydantic>=2.0",
    "numpy>=1.26",
    "sentence-transformers>=2.7",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2.2",
    "httpx>=0.27",
    "PyJWT>=2",
    "gunicorn>=22",
    "uvicorn[standard]>=0.30",
]

[tool.uv.sources]
infra = { workspace = true }

[tool.setuptools.packages.find]
where = [".."]
include = ["rag*"]
